<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="5dp"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textViewOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/order" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textViewOrderPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/_0_00"
                    android:textColor="@color/colorRed" />

            </RelativeLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewOrderDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/order_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewOrder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textViewOrderStatus"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/order_status" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonReorder"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="40dp"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:text="Reorder"
                        android:textSize="10sp" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonOrderTrack"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="40dp"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:text="@string/track"
                        android:textSize="10sp"
                        android:layout_marginStart="5dp"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonCancel"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="40dp"
                        android:layout_marginStart="5dp"
                        android:backgroundTint="@color/colorRed"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:text="@string/cancel"
                        android:textSize="10sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
